parser.output
Terminals which are not used

   BHUMI
   NIYAM
   MAYA
   LBRACKET
   RBRACKET


Grammar

    0 $accept: program $end

    1 program: declarations functions main_function

    2 main_function: SANKALPA LPAREN RPAREN LBRACE statements RBRACE

    3 declarations: /* empty */
    4             | declarations declaration SEMICOLON

    5 declaration: type IDENTIFIER
    6            | type IDENTIFIER ASSIGN expression

    7 functions: /* empty */
    8          | functions function_declaration

    9 function_declaration: YAJNA type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE

   10 parameters: /* empty */
   11           | parameter_list

   12 parameter_list: parameter
   13               | parameter_list COMMA parameter

   14 parameter: type IDENTIFIER

   15 statements: /* empty */
   16           | statements statement

   17 statement: declaration SEMICOLON
   18          | assignment SEMICOLON
   19          | conditional
   20          | loop
   21          | for_loop
   22          | TYAGA SEMICOLON
   23          | NIVRITTI SEMICOLON
   24          | function_call SEMICOLON
   25          | MOKSHA expression SEMICOLON
   26          | input_output SEMICOLON

   27 assignment: IDENTIFIER ASSIGN expression

   28 conditional: DHARMA LPAREN expression RPAREN LBRACE statements RBRACE
   29            | DHARMA LPAREN expression RPAREN LBRACE statements ADHARMA LBRACE statements RBRACE

   30 loop: TAPAS LPAREN expression RPAREN LBRACE statements RBRACE

   31 for_loop: YATRA LPAREN for_initialization SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE

   32 for_initialization: type IDENTIFIER ASSIGN expression
   33                   | assignment

   34 expression: term
   35           | expression YOGA term
   36           | expression VIYOGA term
   37           | expression VIBHAGA term
   38           | expression LT term
   39           | expression GT term
   40           | expression LE term
   41           | expression GE term
   42           | expression EQ term
   43           | expression NE term

   44 term: factor
   45     | term BAL factor
   46     | term VIBHAJAN factor
   47     | term SHESHA factor
   48     | term SAMAVAYA factor

   49 factor: LPAREN expression RPAREN
   50       | IDENTIFIER
   51       | literal
   52       | function_call

   53 literal: INTEGER_LITERAL
   54        | STRING_LITERAL
   55        | FLOAT_LITERAL

   56 function_call: AHVANA LPAREN arguments RPAREN

   57 arguments: /* empty */
   58          | argument_list

   59 argument_list: expression
   60              | argument_list COMMA expression

   61 input_output: SHRAVANA LPAREN IDENTIFIER RPAREN
   62             | MANTRA LPAREN expression RPAREN

   63 type: ARTHA
   64     | JALA
   65     | SATYA
   66     | AKSHARA
   67     | VANI


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 5 6 9 14 27 32 50 61
INTEGER_LITERAL (259) 53
STRING_LITERAL (260) 54
DHARMA (261) 28 29
ADHARMA (262) 29
TAPAS (263) 30
YATRA (264) 31
TYAGA (265) 22
NIVRITTI (266) 23
BHUMI (267)
NIYAM (268)
YAJNA (269) 9
AHVANA (270) 56
MOKSHA (271) 25
MANTRA (272) 62
SHRAVANA (273) 61
ARTHA (274) 63
JALA (275) 64
SATYA (276) 65
AKSHARA (277) 66
VANI (278) 67
YOGA (279) 35
VIYOGA (280) 36
BAL (281) 45
VIBHAJAN (282) 46
SHESHA (283) 47
SAMAVAYA (284) 48
VIBHAGA (285) 37
MAYA (286)
SEMICOLON (287) 4 17 18 22 23 24 25 26 31
ASSIGN (288) 6 27 32
LPAREN (289) 2 9 28 29 30 31 49 56 61 62
RPAREN (290) 2 9 28 29 30 31 49 56 61 62
LBRACE (291) 2 9 28 29 30 31
RBRACE (292) 2 9 28 29 30 31
LBRACKET (293)
RBRACKET (294)
COMMA (295) 13 60
SANKALPA (296) 2
EQ (297) 42
NE (298) 43
LT (299) 38
LE (300) 40
GT (301) 39
GE (302) 41
FLOAT_LITERAL (303) 55


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
main_function (51)
    on left: 2, on right: 1
declarations (52)
    on left: 3 4, on right: 1 4
declaration (53)
    on left: 5 6, on right: 4 17
functions (54)
    on left: 7 8, on right: 1 8
function_declaration (55)
    on left: 9, on right: 8
parameters (56)
    on left: 10 11, on right: 9
parameter_list (57)
    on left: 12 13, on right: 11 13
parameter (58)
    on left: 14, on right: 12 13
statements (59)
    on left: 15 16, on right: 2 9 16 28 29 30 31
statement (60)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 16
assignment (61)
    on left: 27, on right: 18 31 33
conditional (62)
    on left: 28 29, on right: 19
loop (63)
    on left: 30, on right: 20
for_loop (64)
    on left: 31, on right: 21
for_initialization (65)
    on left: 32 33, on right: 31
expression (66)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 6 25 27 28 29
    30 31 32 35 36 37 38 39 40 41 42 43 49 59 60 62
term (67)
    on left: 44 45 46 47 48, on right: 34 35 36 37 38 39 40 41 42 43
    45 46 47 48
factor (68)
    on left: 49 50 51 52, on right: 44 45 46 47 48
literal (69)
    on left: 53 54 55, on right: 51
function_call (70)
    on left: 56, on right: 24 52
arguments (71)
    on left: 57 58, on right: 56
argument_list (72)
    on left: 59 60, on right: 58 60
input_output (73)
    on left: 61 62, on right: 26
type (74)
    on left: 63 64 65 66 67, on right: 5 6 9 14 32


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (declarations)

    program       go to state 1
    declarations  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: declarations . functions main_function
    4 declarations: declarations . declaration SEMICOLON

    ARTHA    shift, and go to state 4
    JALA     shift, and go to state 5
    SATYA    shift, and go to state 6
    AKSHARA  shift, and go to state 7
    VANI     shift, and go to state 8

    $default  reduce using rule 7 (functions)

    declaration  go to state 9
    functions    go to state 10
    type         go to state 11


state 3

    0 $accept: program $end .

    $default  accept


state 4

   63 type: ARTHA .

    $default  reduce using rule 63 (type)


state 5

   64 type: JALA .

    $default  reduce using rule 64 (type)


state 6

   65 type: SATYA .

    $default  reduce using rule 65 (type)


state 7

   66 type: AKSHARA .

    $default  reduce using rule 66 (type)


state 8

   67 type: VANI .

    $default  reduce using rule 67 (type)


state 9

    4 declarations: declarations declaration . SEMICOLON

    SEMICOLON  shift, and go to state 12


state 10

    1 program: declarations functions . main_function
    8 functions: functions . function_declaration

    YAJNA     shift, and go to state 13
    SANKALPA  shift, and go to state 14

    main_function         go to state 15
    function_declaration  go to state 16


state 11

    5 declaration: type . IDENTIFIER
    6            | type . IDENTIFIER ASSIGN expression

    IDENTIFIER  shift, and go to state 17


state 12

    4 declarations: declarations declaration SEMICOLON .

    $default  reduce using rule 4 (declarations)


state 13

    9 function_declaration: YAJNA . type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE

    ARTHA    shift, and go to state 4
    JALA     shift, and go to state 5
    SATYA    shift, and go to state 6
    AKSHARA  shift, and go to state 7
    VANI     shift, and go to state 8

    type  go to state 18


state 14

    2 main_function: SANKALPA . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 19


state 15

    1 program: declarations functions main_function .

    $default  reduce using rule 1 (program)


state 16

    8 functions: functions function_declaration .

    $default  reduce using rule 8 (functions)


state 17

    5 declaration: type IDENTIFIER .
    6            | type IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 20

    $default  reduce using rule 5 (declaration)


state 18

    9 function_declaration: YAJNA type . IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 21


state 19

    2 main_function: SANKALPA LPAREN . RPAREN LBRACE statements RBRACE

    RPAREN  shift, and go to state 22


state 20

    6 declaration: type IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 29
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 21

    9 function_declaration: YAJNA type IDENTIFIER . LPAREN parameters RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 34


state 22

    2 main_function: SANKALPA LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE  shift, and go to state 35


state 23

   50 factor: IDENTIFIER .

    $default  reduce using rule 50 (factor)


state 24

   53 literal: INTEGER_LITERAL .

    $default  reduce using rule 53 (literal)


state 25

   54 literal: STRING_LITERAL .

    $default  reduce using rule 54 (literal)


state 26

   56 function_call: AHVANA . LPAREN arguments RPAREN

    LPAREN  shift, and go to state 36


state 27

   49 factor: LPAREN . expression RPAREN

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 37
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 28

   55 literal: FLOAT_LITERAL .

    $default  reduce using rule 55 (literal)


state 29

    6 declaration: type IDENTIFIER ASSIGN expression .
   35 expression: expression . YOGA term
   36           | expression . VIYOGA term
   37           | expression . VIBHAGA term
   38           | expression . LT term
   39           | expression . GT term
   40           | expression . LE term
   41           | expression . GE term
   42           | expression . EQ term
   43           | expression . NE term

    YOGA     shift, and go to state 38
    VIYOGA   shift, and go to state 39
    VIBHAGA  shift, and go to state 40
    EQ       shift, and go to state 41
    NE       shift, and go to state 42
    LT       shift, and go to state 43
    LE       shift, and go to state 44
    GT       shift, and go to state 45
    GE       shift, and go to state 46

    $default  reduce using rule 6 (declaration)


state 30

   34 expression: term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 34 (expression)


state 31

   44 term: factor .

    $default  reduce using rule 44 (term)


state 32

   51 factor: literal .

    $default  reduce using rule 51 (factor)


state 33

   52 factor: function_call .

    $default  reduce using rule 52 (factor)


state 34

    9 function_declaration: YAJNA type IDENTIFIER LPAREN . parameters RPAREN LBRACE statements RBRACE

    ARTHA    shift, and go to state 4
    JALA     shift, and go to state 5
    SATYA    shift, and go to state 6
    AKSHARA  shift, and go to state 7
    VANI     shift, and go to state 8

    $default  reduce using rule 10 (parameters)

    parameters      go to state 51
    parameter_list  go to state 52
    parameter       go to state 53
    type            go to state 54


state 35

    2 main_function: SANKALPA LPAREN RPAREN LBRACE . statements RBRACE

    $default  reduce using rule 15 (statements)

    statements  go to state 55


state 36

   56 function_call: AHVANA LPAREN . arguments RPAREN

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    $default  reduce using rule 57 (arguments)

    expression     go to state 56
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33
    arguments      go to state 57
    argument_list  go to state 58


state 37

   35 expression: expression . YOGA term
   36           | expression . VIYOGA term
   37           | expression . VIBHAGA term
   38           | expression . LT term
   39           | expression . GT term
   40           | expression . LE term
   41           | expression . GE term
   42           | expression . EQ term
   43           | expression . NE term
   49 factor: LPAREN expression . RPAREN

    YOGA     shift, and go to state 38
    VIYOGA   shift, and go to state 39
    VIBHAGA  shift, and go to state 40
    RPAREN   shift, and go to state 59
    EQ       shift, and go to state 41
    NE       shift, and go to state 42
    LT       shift, and go to state 43
    LE       shift, and go to state 44
    GT       shift, and go to state 45
    GE       shift, and go to state 46


state 38

   35 expression: expression YOGA . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 60
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 39

   36 expression: expression VIYOGA . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 61
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 40

   37 expression: expression VIBHAGA . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 62
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 41

   42 expression: expression EQ . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 63
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 42

   43 expression: expression NE . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 64
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 43

   38 expression: expression LT . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 65
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 44

   40 expression: expression LE . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 66
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 45

   39 expression: expression GT . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 67
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 46

   41 expression: expression GE . term

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    term           go to state 68
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 47

   45 term: term BAL . factor

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    factor         go to state 69
    literal        go to state 32
    function_call  go to state 33


state 48

   46 term: term VIBHAJAN . factor

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    factor         go to state 70
    literal        go to state 32
    function_call  go to state 33


state 49

   47 term: term SHESHA . factor

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    factor         go to state 71
    literal        go to state 32
    function_call  go to state 33


state 50

   48 term: term SAMAVAYA . factor

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    factor         go to state 72
    literal        go to state 32
    function_call  go to state 33


state 51

    9 function_declaration: YAJNA type IDENTIFIER LPAREN parameters . RPAREN LBRACE statements RBRACE

    RPAREN  shift, and go to state 73


state 52

   11 parameters: parameter_list .
   13 parameter_list: parameter_list . COMMA parameter

    COMMA  shift, and go to state 74

    $default  reduce using rule 11 (parameters)


state 53

   12 parameter_list: parameter .

    $default  reduce using rule 12 (parameter_list)


state 54

   14 parameter: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 75


state 55

    2 main_function: SANKALPA LPAREN RPAREN LBRACE statements . RBRACE
   16 statements: statements . statement

    IDENTIFIER  shift, and go to state 76
    DHARMA      shift, and go to state 77
    TAPAS       shift, and go to state 78
    YATRA       shift, and go to state 79
    TYAGA       shift, and go to state 80
    NIVRITTI    shift, and go to state 81
    AHVANA      shift, and go to state 26
    MOKSHA      shift, and go to state 82
    MANTRA      shift, and go to state 83
    SHRAVANA    shift, and go to state 84
    ARTHA       shift, and go to state 4
    JALA        shift, and go to state 5
    SATYA       shift, and go to state 6
    AKSHARA     shift, and go to state 7
    VANI        shift, and go to state 8
    RBRACE      shift, and go to state 85

    declaration    go to state 86
    statement      go to state 87
    assignment     go to state 88
    conditional    go to state 89
    loop           go to state 90
    for_loop       go to state 91
    function_call  go to state 92
    input_output   go to state 93
    type           go to state 11


state 56

   35 expression: expression . YOGA term
   36           | expression . VIYOGA term
   37           | expression . VIBHAGA term
   38           | expression . LT term
   39           | expression . GT term
   40           | expression . LE term
   41           | expression . GE term
   42           | expression . EQ term
   43           | expression . NE term
   59 argument_list: expression .

    YOGA     shift, and go to state 38
    VIYOGA   shift, and go to state 39
    VIBHAGA  shift, and go to state 40
    EQ       shift, and go to state 41
    NE       shift, and go to state 42
    LT       shift, and go to state 43
    LE       shift, and go to state 44
    GT       shift, and go to state 45
    GE       shift, and go to state 46

    $default  reduce using rule 59 (argument_list)


state 57

   56 function_call: AHVANA LPAREN arguments . RPAREN

    RPAREN  shift, and go to state 94


state 58

   58 arguments: argument_list .
   60 argument_list: argument_list . COMMA expression

    COMMA  shift, and go to state 95

    $default  reduce using rule 58 (arguments)


state 59

   49 factor: LPAREN expression RPAREN .

    $default  reduce using rule 49 (factor)


state 60

   35 expression: expression YOGA term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 35 (expression)


state 61

   36 expression: expression VIYOGA term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 36 (expression)


state 62

   37 expression: expression VIBHAGA term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 37 (expression)


state 63

   42 expression: expression EQ term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 42 (expression)


state 64

   43 expression: expression NE term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 43 (expression)


state 65

   38 expression: expression LT term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 38 (expression)


state 66

   40 expression: expression LE term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 40 (expression)


state 67

   39 expression: expression GT term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 39 (expression)


state 68

   41 expression: expression GE term .
   45 term: term . BAL factor
   46     | term . VIBHAJAN factor
   47     | term . SHESHA factor
   48     | term . SAMAVAYA factor

    BAL       shift, and go to state 47
    VIBHAJAN  shift, and go to state 48
    SHESHA    shift, and go to state 49
    SAMAVAYA  shift, and go to state 50

    $default  reduce using rule 41 (expression)


state 69

   45 term: term BAL factor .

    $default  reduce using rule 45 (term)


state 70

   46 term: term VIBHAJAN factor .

    $default  reduce using rule 46 (term)


state 71

   47 term: term SHESHA factor .

    $default  reduce using rule 47 (term)


state 72

   48 term: term SAMAVAYA factor .

    $default  reduce using rule 48 (term)


state 73

    9 function_declaration: YAJNA type IDENTIFIER LPAREN parameters RPAREN . LBRACE statements RBRACE

    LBRACE  shift, and go to state 96


state 74

   13 parameter_list: parameter_list COMMA . parameter

    ARTHA    shift, and go to state 4
    JALA     shift, and go to state 5
    SATYA    shift, and go to state 6
    AKSHARA  shift, and go to state 7
    VANI     shift, and go to state 8

    parameter  go to state 97
    type       go to state 54


state 75

   14 parameter: type IDENTIFIER .

    $default  reduce using rule 14 (parameter)


state 76

   27 assignment: IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 98


state 77

   28 conditional: DHARMA . LPAREN expression RPAREN LBRACE statements RBRACE
   29            | DHARMA . LPAREN expression RPAREN LBRACE statements ADHARMA LBRACE statements RBRACE

    LPAREN  shift, and go to state 99


state 78

   30 loop: TAPAS . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 100


state 79

   31 for_loop: YATRA . LPAREN for_initialization SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 101


state 80

   22 statement: TYAGA . SEMICOLON

    SEMICOLON  shift, and go to state 102


state 81

   23 statement: NIVRITTI . SEMICOLON

    SEMICOLON  shift, and go to state 103


state 82

   25 statement: MOKSHA . expression SEMICOLON

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 104
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 83

   62 input_output: MANTRA . LPAREN expression RPAREN

    LPAREN  shift, and go to state 105


state 84

   61 input_output: SHRAVANA . LPAREN IDENTIFIER RPAREN

    LPAREN  shift, and go to state 106


state 85

    2 main_function: SANKALPA LPAREN RPAREN LBRACE statements RBRACE .

    $default  reduce using rule 2 (main_function)


state 86

   17 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 107


state 87

   16 statements: statements statement .

    $default  reduce using rule 16 (statements)


state 88

   18 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 108


state 89

   19 statement: conditional .

    $default  reduce using rule 19 (statement)


state 90

   20 statement: loop .

    $default  reduce using rule 20 (statement)


state 91

   21 statement: for_loop .

    $default  reduce using rule 21 (statement)


state 92

   24 statement: function_call . SEMICOLON

    SEMICOLON  shift, and go to state 109


state 93

   26 statement: input_output . SEMICOLON

    SEMICOLON  shift, and go to state 110


state 94

   56 function_call: AHVANA LPAREN arguments RPAREN .

    $default  reduce using rule 56 (function_call)


state 95

   60 argument_list: argument_list COMMA . expression

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 111
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 96

    9 function_declaration: YAJNA type IDENTIFIER LPAREN parameters RPAREN LBRACE . statements RBRACE

    $default  reduce using rule 15 (statements)

    statements  go to state 112


state 97

   13 parameter_list: parameter_list COMMA parameter .

    $default  reduce using rule 13 (parameter_list)


state 98

   27 assignment: IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 113
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 99

   28 conditional: DHARMA LPAREN . expression RPAREN LBRACE statements RBRACE
   29            | DHARMA LPAREN . expression RPAREN LBRACE statements ADHARMA LBRACE statements RBRACE

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 114
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 100

   30 loop: TAPAS LPAREN . expression RPAREN LBRACE statements RBRACE

    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    AHVANA           shift, and go to state 26
    LPAREN           shift, and go to state 27
    FLOAT_LITERAL    shift, and go to state 28

    expression     go to state 115
    term           go to state 30
    factor         go to state 31
    literal        go to state 32
    function_call  go to state 33


state 101

   31 for_loop: YATRA LPAREN . for_initialization SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 76
    ARTHA       shift, and go to state 4
    JALA        shift, and go to state 5
    SATYA       shift, and go to state 6
    AKSHARA     shift, and go to state 7
    VANI        shift, and go to state 8

    assignment          go to state 116
    for_initialization  go to state 117
    type                go to state 118


state 102

   22 statement: TYAGA SEMICOLON .

    $default  reduce using rule 22 (statement)


state 103

   23 statement: NIVRITTI SEMICOLON .

    $default  reduce using rule 23 (statement)


state 104
